include executables in dataspaceCoverageAPI (#3080)